--- a/index.html
+++ b/index.html
@@ -1,3 +1,66 @@
-"Hello World! Welcome to my website" 
-"Hello World! Welcome to my website" 
-"Hello World! Welcome to my website" 
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+
+<div class="body">
+  <!--Navbar-->
+  <div class="navbar navbar-default navbar-fixed-top">
+    <div class="container-fluid">
+      <div class="navbar-left">
+        <a class="active" href="#home">Beranda</a>
+        <a href="#about">Tentang Saya</a>
+        <a href="#portfolio">Portfolio</a>
+        <a href="#contact">Kontak</a>
+      </div>
+    </div>
+  </div>
+
+  <!--body-->
+  <div class="container-fluid">
+
+    <!--home title-->
+    <div class "container">
+      <a class="NavAnchor" id="home"></a>
+      <div id="home">
+        <h1>Yusuf Rizky Yuhansyah</h1>
+      </div>
+    </div>
+    <!--about-->
+    <div class="container">
+      <a class="NavAnchor" id="about"></a>
+      <div id="about">
+        <h1>Tentang saya</h1>
+        <div class="row">
+          <div class="col-md-6">
+            <h3>Saya Yusuf Rizky Yuhansyah NPM: 2015061062. Saya kuliah di Universitas Lampung jurusan tekhik elektro dan prodi Teknik Informatika.</h3></div>
+          <div class="col-md-6 text-center">
+
+        </div>
+      </div>
+    </div>
+    <!--portfolio-->
+    <div class="container">
+      <a class="NavAnchor" id="portfolio"></a>
+      <div id="portfolio">
+        <h1>Portofolio saya</h1>
+        <a href="https://codepen.io/xellyx-van-de-corteno" target="_blank"><button>
+  <img src="https://pbs.twimg.com/profile_images/1276770212927410176/qTgTIejk_400x400.jpg" style= "height: 150px; width: 180px"></img></button></a>
+        <p>Free Code Camp saya</p>
+      </div>
+    </div>
+    <!--contact-->
+    <div class="container">
+      <a class="NavAnchor" id="contact"></a>
+      <div id="contact">
+        <h1>Contact</h1>
+        <div class="row">
+          <div class="col-md-6 text-center">
+            <h3>yusufrizkyyuhansyah34@gmail.com</h3>
+          </div>
+          <div class="col-md-6 text-center">
+            <a href="https://web.facebook.com/Lxrth/" target="_blank"><button class="btn btn-default pull-center"><i class="fa fa-facebook"></i> Facebook</button></a>
+            <a href="https://codepen.io/xellyx-van-de-corteno" target="_blank"><button class="btn btn-default pull-center" role="button"><i class="fa fa-codepen"></i> CodePen</button></a>
+            <a href="https://github.com/xellyx" target="_blank"><button class="btn btn-default pull-Center" role="button"><i class="fa fa-github-square"></i> Github</button></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
